--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@types/amqplib": "^0.10.7",
+    "@types/ioredis": "^4.28.10",
     "@types/node-os-utils": "^1.3.4",
     "amqplib": "^0.10.9",
+    "bullmq": "^5.58.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -36,6 +41,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.7.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nest-winston": "^1.10.2",
